Bug 49127 - [PNV G33 bisected] piglit fbo and oglc dlist(basic.allCases) regressed
Summary: [PNV G33 bisected] piglit fbo and oglc dlist(basic.allCases) regressed
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i915 (show other bugs)
Version: git
Hardware: All Linux (All)
: high major
Assignee: Kenneth Graunke
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-24 23:10 UTC by lu hua
Modified: 2012-10-10 03:30 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2012-04-24 23:10:33 UTC
System Environment:
--------------------------
Arch:             i386
Platform:         Pineview
Libdrm:		 (master)2.4.33-15-g754655c795fff1c6267d358e54ad5198aee0cdd6
Mesa:		 (master)1a33c1b2b895566299ec76643659adacc239a3dc
Xserver:	(master)xorg-server-1.12.0-105-gd77eb7ee49ef19c2c4c7381d56e9d0f9c3fbc890
Xf86_video_intel:(master)2.18.0-220-g8c58c840b1ba579a5601804fc710c58e1e00213f
Libva:		(vaapi-ext)f12f80371fb534e6bbf248586b3c17c298a31f4e
Libva_intel_driver:(vaapi-ext)82fa52510a37ab645daaa3bb7091ff5096a20d0b
Kernel:	(drm-intel-next-queued) eea7d92bdb47727dfaf5f148f6ea72e9a1cffaf1

Bug detailed description:
-----------------------------
It fails on Pineview with mesa master branch.It doesn't happen on mesa 8.0 branch.

Following cases also fail with same commit:
Oglc cases:
copytex(basic.allCases)
texenv(basic.allCases)
ver_colormat(basic.immediateModePrimitives)
ver_colormat(basic.displayListsTests)
multitex(basic.allCases)
texcubemap(basic.cubemap)
blend-constcolor(basic.allCases)
texCombine(Combiner.Functions)
texCombine(Combiner.Sources)
texCombine(Combiner.Arguments)
texCombine(Combiner.Scales)
shad-objectsAPI(advanced.TestShaderInMultiplePrograms)
shad-compiler(advanced.TestOperations4)
shad-compiler(advanced.TestTexture1D_FragShader)
multipleRenderTargets(advanced.TestSingleColorNoShader)
max_values(advanced.fragmentProgram.GL_MAX_PROGRAM_LOCAL_PARAMETERS)
separatestencil-neu(Basics.BothFacesCullingOffCoreAPI)
separatestencil-neu(Basics.BothFacesCullingOffExtAPI)
separatestencil-neu(Basics.SingleFaceCullingOffCoreAPI)
separatestencil-neu(Basics.SingleFaceCullingOffExtAPI)
separatestencil-neu(Basics.FrontFaceCullingOffCoreAPI)
separatestencil-neu(Basics.FrontFaceCullingOffExtAPI)
separatestencil-neu(Basics.BackFaceCullingOffCoreAPI)
separatestencil-neu(Basics.BackFaceCullingOffExtAPI)
separatestencil-neu(Basics.BothFacesCullingOnFrontCoreAPI)
separatestencil-neu(Basics.BothFacesCullingOnFrontExtAPI)
separatestencil-neu(Basics.BothFacesCullingOnBackCoreAPI)
separatestencil-neu(Basics.BothFacesCullingOnBackExtAPI)
separatestencil-neu(Input.FacesCoreAPI)
separatestencil-neu(Input.FacesExtAPI)
separatestencil-neu(Input.FunctionCoreAPI)
separatestencil-neu(Input.FunctionsExtAPI)
separatestencil-neu(Input.ConditionCoreAPI)
separatestencil-neu(Input.ConditionsExtAPI)
separatestencil-neu(Input.ParamsCoreAPI)
separatestencil-neu(Input.ParamsExtAPI)
separatestencil-neu(Condition.FailCoreAPI)
separatestencil-neu(Condition.FailExtAPI)
separatestencil-neu(Mask.BothFacesCullingOffCoreAPI)
separatestencil-neu(Mask.BothFacesCullingOffExtAPI)
pbo(texImage.1PBODefaults)
pbo(texImage.1PBOBufferSubData)
pbo(texImage.1PBOBufferMapping)
pbo(texImage.multiPBOsDefaults)
pbo(texImage.multiPBOsBufferMapping)
pbo(texImage.1PBOChangeOffset)
pbo(texImage.1PBOChangeUsageType)
pbo(texImage.1PBOChangeAccessType)
pbo(texImage.1PBOChangeDataSize)
fbo(basic.renderTo1TexAttach)
fbo(renderToTex.1FBO4ColorBuffers)
fbo(renderToTex.2FBOsAllColorBuffers)
fbo(renderToTex.2FBOsSharedDepthBuffer)
fbo(renderToTex.2FBOsAllBuffers)
fbo(renderToTex.1FBOIterateTexTargets)
fbo(renderToTex.1FBOIterateBaseLevels)
fbo(renderToTex.1FBOIterate3DzOffest)
fbo(renderToTex.1FBOIterateTexSizes)
fbo(renderToTex.1FBOTexBorder)
fbo(renderToTex.1FBOCubeMap)
fbo(renderToTex.2FBOsShareTex)
fbo(renderToTex.1FBOChangeTexAttr)
fbo(renderToTex.1FBOIterateIntFormats)
fbo(renderToRb.1FBOMixedRbAndTexAttach)
fbo(renderToRb.2FBOsMixedRbAndTexAttach)
fbo(mrt.renderToTexNoShaders)
fbo(mrt.renderToTexFragShader)
fbo(negative.defaultFBO)
fbo(scenario.dynamicTexture)
fbo(scenario.doubleBuffering)
fbo(scenario.alphaDepth)
vao(advanced.mixEnables.basic)
fbo-multisample(advanced.blit.singletomsaa.colorstencil)
fbo-multisample(advanced.blit.defaulttomsaa.colorstencil)
pxtrans-copy(advanced.depthTest.noFbo)
pxtrans-copy(advanced.depthTest.separatareFbo)
pxtrans-copy(advanced.depthTest.fbo)
Piglit cases:
fbo_fbo-1d
fbo_fbo-3d
fbo_fbo-alphatest-formats
fbo_fbo-alphatest-nocolor
fbo_fbo-alphatest-nocolor-ff
fbo_fbo-blending-formats
fbo_fbo-blit
fbo_fbo-copyteximage
fbo_fbo-copyteximage-simple
fbo_fbo-fragcoord
fbo_fbo-generatemipmap
fbo_fbo-generatemipmap-nonsquare
fbo_fbo-generatemipmap-npot
fbo_fbo-generatemipmap-scissor
fbo_fbo-generatemipmap-viewport
fbo_fbo-maxsize
general_hiz
texturing_copyteximage
texturing_copyteximage-border
texturing_copytexsubimage
texturing_lodbias
Ogles1 cases:
mustpass.c
mask.c
spclear.c
spop.c
spfunc.c
zbclear.c
multitex.c
bufobj.c

Bisect shows: fb4a34e60eb4c1bdc7b0fdcd98d1bf3038c354e8 is the first bad commit.
commit fb4a34e60eb4c1bdc7b0fdcd98d1bf3038c354e8
Author:     Marek Olšák <maraeo@gmail.com>
AuthorDate: Mon Apr 16 16:04:52 2012 +0200
Commit:     Marek Olšák <maraeo@gmail.com>
CommitDate: Thu Apr 19 14:47:21 2012 +0200

    mesa: set _NEW_VARYING_VP_INPUTS flag only if fixed-func VP is enabled & val

    Reviewed-by: Brian Paul <brianp@vmware.com>
    Reviewed-by: Mathias Fröhlich <Mathias.Froehlich@web.de>
Comment 1 lu hua 2012-04-24 23:33:50 UTC
It also happens on G33 with mesa master branch.
Comment 2 Ian Romanick 2012-04-26 00:56:40 UTC
Can you try this on swrast and llvmpipe?  This seems like it may impact any driver that uses the software TNL paths.

I simple test case that can be distributed outside Intel would help get this fixed.
Comment 3 Gordon Jin 2012-04-26 19:16:43 UTC
It was mentioned below piglit cases regressed as well:
fbo_fbo-1d
fbo_fbo-3d
fbo_fbo-alphatest-formats
fbo_fbo-alphatest-nocolor
fbo_fbo-alphatest-nocolor-ff
fbo_fbo-blending-formats
fbo_fbo-blit
fbo_fbo-copyteximage
fbo_fbo-copyteximage-simple
fbo_fbo-fragcoord
fbo_fbo-generatemipmap
fbo_fbo-generatemipmap-nonsquare
fbo_fbo-generatemipmap-npot
fbo_fbo-generatemipmap-scissor
fbo_fbo-generatemipmap-viewport
fbo_fbo-maxsize
general_hiz
texturing_copyteximage
texturing_copyteximage-border
texturing_copytexsubimage
texturing_lodbias
Comment 4 lu hua 2012-04-26 22:49:26 UTC
Run it on swrast with commit fb4a34e60eb4c, piglit cases pass. Oglc cases fail.
Oglc cases also fail on swrast with commit 576c8c592a4be7047a0.
Comment 5 Marek Olšák 2012-08-13 23:06:58 UTC
Is this still an issue with current Mesa git?
Comment 6 lu hua 2012-08-14 03:30:39 UTC
These cases still fail.
Comment 7 Marek Olšák 2012-08-15 19:54:24 UTC
While I'd like to find out the real cause and fix this issue, I would not oppose to reverting the patch as a last resort.
Comment 8 lu hua 2012-09-03 09:02:54 UTC
It also fails on mesa 9.0 branch(commit:2d2f1fd164218eacf2b142bc808be1f25f66e72c)
Comment 9 Kenneth Graunke 2012-09-16 08:20:06 UTC
Patch on mailing list:
http://lists.freedesktop.org/archives/mesa-dev/2012-September/027523.html
Comment 10 Kenneth Graunke 2012-10-06 14:48:40 UTC
Fixed on master by:

commit 7fa0f10cd85ccb5afbc3a961164011de70970ff3
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Mon Oct 1 20:11:38 2012 -0700

    mesa: Flag _NEW_VARYING_VP_INPUTS when TexEnv programs are active.
    
    The idea here is to not flag _NEW_VARYING_VP_INPUTS when shaders (either
    GLSL or ARB vp/fp) are in use.  If either TNL or TexEnv programs are
    active, at least one stage is using fixed function.
    
    On Pineview, fixes 20 Piglit, 60 oglconforms, and 7 ES 1.1 conformance
    tests, as well as missing textures in Xonotic.  These were all
    regressions since commit fb4a34e60eb4c1bdc7b0fdcd98d1bf3038c354e8.
    
    NOTE: This is a candidate for the 9.0 branch.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=49127
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54807
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>

Fixed on 9.0 by 8491e03b2befd7e9d16c5d17f95a83d91c5b16c9.
Comment 11 lu hua 2012-10-10 03:30:29 UTC
Verified.Fixed on master branch commit 6ef37f71b0a0460808bb68a9102c15f313492c9f.
Fixed on 9.0 branch commit 7851d398def2df3f6836a500d67123eed50f3943.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.