src/mesa/main/state.c
@@ -627,7 +627,8 @@ _mesa_set_varying_vp_inputs( struct gl_context *ctx,
        *
        * It's okay to check the VP pointer here, because this is called after
        * _mesa_update_state in the vbo module. */
-      if (ctx->VertexProgram._TnlProgram) {
+      if (ctx->VertexProgram._TnlProgram ||
+          ctx->FragmentProgram._TexEnvProgram) {
          ctx->NewState |= _NEW_VARYING_VP_INPUTS;
       }
       /*printf("%s %x\n", __FUNCTION__, varying_inputs);*/
